@@ -2,10 +2,12 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.05 [20100211] [svn: r138]
+ChangeLog for sdparm-1.05 [20100211] [svn: r141]
   - add '--readonly' option especially for '-C start' and
-  - '-C stop' on ATA disks.
+    '-C stop' on ATA disks.
+  - Control mode page updates (spc4r23)
   - block device characteristics VPD page: decode form factor
+  - extended inquiry VPD page: activate_microcode+r_sup (spc4r23)
   - SAS-2.1 specification split, upper layers placed in SPL
     - add enable_slumber and enable_partial fields to
       Enhanced phy control mode page
